Version 5.3.0   unreleased

    * Deprecate NativeUtils.openUrl(), which doesn't work properly in IE 9.

Version 5.2.7   02 Sep 2015

    * Implement Jacoco coverage reports in build.gradle.
    * Implement Checkstyle reports in build.gradle.
    * Implement JavaNCSS metrics in build.gradle.
    * Exclude duplicates from generated jar files.
    * Bump up to CedarBuild v0.9.5, to get Javadoc fixes.
    * Bump up to AppEngine v1.9.25, to stay up-to-date.

Version 5.2.6   17 Jul 2015

    * Bump up to CedarBuild v0.9.3, just to stay up-to-date.
    * Fix Eclipse 4.5 resource leak warning for streams in FilesystemUtils.copyFile().
    * Fix Eclipse 4.5 resource leak warning for Scanner in StringUtils.convertStreamToString().

Version 5.2.5   13 Jul 2015

    * Bump up to AppEngine v1.9.23 just to stay up-to-date.
    * Convert to Gradle 2 by upgrading to CedarBuild v0.9.1 (tested with Gradle v2.5).

Version 5.2.4   14 Jun 2015

    * Bump up to CedarBuild v0.8.17, just to stay up-to-date.
    * Configure Mercurial line endings in .hgeol and auto-convert files as necessary.

Version 5.2.3   22 Apr 2015

    * Add methods to FilesystemUtils: getCurrentWorkingDir(), getFileSize(), isAbsolutePath()
    * Add new methods in IFilesystemService to match up with FilesystemUtils.
    * Add new dependency on commons-io for cedar-common-utils, for absolute path feature.

Version 5.2.2   17 Apr 2015

    * Create GwtAssertions class in gwttestutils, with method assertRpcsImplementRemoteService().
    * Add new unit test class RpcInterfaceTest to check that RPCs implement the proper interface.

Version 5.2.1   17 Mar 2015

    * Make adjustments for transition from Google Code to BitBucket.

Version 5.2.0   17 Mar 2015

   * Bump up to AppEngine v1.9.18 just to stay up-to-date.
   * Move to Maven Central based on support in CedarBuild v0.8.14.
   * Pull in Objectify 3.1 from repackaged repository in Maven Central.

Version 5.1.0   11 Jan 2015
